vmanalytic/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vmanalytic
  labels:
    app.kubernetes.io/name: vmanalytic
