vmanalytic/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmanalytic
  namespace: vmanalytic
  labels:
    app.kubernetes.io/name: vmanalytic
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vmanalytic
  ports:
    - name: http
      port: 80
      targetPort: http
